JMIA-6763 - fetch payment types
